# bridge

./: Cargo.toml  build.rs  flake.nix  result  result-app
app-example/: .gitignore  Cargo.toml  fdf.json  ffi.json  flake.nix  hooks.toml  shell.qmx
app-example/src/: main.rs
src/: build_project.rs  config.rs  fdf_bridge.cpp  fdf_bridge.h  ffi.rs  hooks.rs  lib.rs  main.rs  sharedconfig.qml  sharedsettings.h  sharedsettings_android.cpp  sharedsettings_fallback.cpp  sharedsettings_ios.mm  transpile.rs  trash_bridge.cpp  trash_bridge.h
